--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,18 +4,18 @@
 }
 
 body{
-    /* background: #642B73;   */
     /* fallback for old browsers */
-    /* background: -webkit-linear-gradient(to bottom, #36d1dc , #5b86e5);  */
+    background: -webkit-linear-gradient(to bottom, #36d1dc , #5b86e5); 
      /* Chrome 10-25, Safari 5.1-6 */
-    /* background: linear-gradient(to bottom, #36d1dc , #5b86e5);  */
+    background: linear-gradient(to bottom, #36d1dc , #5b86e5, #5b86e5); 
+    background-repeat: no-repeat;
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: #fff;
     height: 100vh;
     width: 100vw;
 }
 
 .container{
+    background-color: #fff;
     display: inline-block;
     text-align: center;
     width: 100%;
@@ -26,6 +26,20 @@ body{
     padding: 50px 70px;
     border-radius: 8px;
     border: 1px solid #ddd;
-    box-shadow: 0 16px 96px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 16px 96px rgba(0, 0, 0, 0.3);
     transform: translate(-50%, -50%);
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.container:hover{
+    box-shadow: 0 16px 96px rgba(0, 0, 0, 0.1);
+    transition: 1s ease all;
+}
+
+.app-title p{
+    font-size: 3rem;
+    font-weight: 700;
+    color: rgb(27, 116, 175);
+    text-transform: uppercase;
 }
